# Project-practice

./: README.md
reports/: Отчет.docx
site/Визитка проекта/: index.html
variable/prod-third-stage-main/: .gitignore  Dockerfile  Makefile  README.md  Technical Specification.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  strings.py
variable/prod-third-stage-main/callback/: enum.py
variable/prod-third-stage-main/filters/: user.py
variable/prod-third-stage-main/keyboards/: builders.py  fabrics.py  inline.py  reply.py
variable/prod-third-stage-main/models/: travels.py  users.py
variable/prod-third-stage-main/routers/: menu.py  other.py  profile.py  registration.py  travels.py
variable/prod-third-stage-main/states/: form.py
variable/prod-third-stage-main/travel_agent/: __main__.py
variable/prod-third-stage-main/utils/: db.py
variable/prod-third-stage-main/validators/: travels.py  user.py
