[tool.poetry]
name = "travel-agent"
version = "0.0.1"
description = "Telegram бот для планирования путешествий"
authors = ["Данил Погонцев <data.name.id@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
environs = "^11.0.0"
sqlalchemy = "^2.0.28"
geopy = "^2.4.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "ARG002", "A002", "RUF001", "TCH003"]

[tool.ruff.lint.per-file-ignores]
"*/models.py" = ["N815"]
"*/serializers.py" = ["N815"]
"*/migrations/*.py" = ["ALL"]
"*strings.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
